Changes made to master

--- a/tests/templates/base.html
+++ b/tests/templates/base.html
@@ -48,7 +48,7 @@
       <a class="nav-link" href="/homepage/categories/">Categories</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/homepage/allsoftwares/">All Softwares</a>
+      <a class="nav-link" href="/homepage/softwares/">All Softwares</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/homepage/mysoftwares/">My Softwares</a>
