--- a/tests/templates/singleproduct.html
+++ b/tests/templates/singleproduct.html
@@ -25,7 +25,7 @@
 <!--          <label class="label label-info" >Email: </label><span class="event-title">{{ content.current.user.email }}</span>
 -->
           <span class="event-buy">
-              <form action="/homepage/categories/products/productpurchased/{{ content.id }}">
+              <form action="/homepage/categories/products/productpurchased/{{ content.id }}" target="_blank">
              <button class="btn btn-primary" type="submit" onclick="isDownloading();" id = "downloading">PAY</button>
                   </form>
           </span>
