--- a/tests/templates/homepage.html
+++ b/tests/templates/homepage.html
@@ -20,8 +20,8 @@
       <div class="feed-content">
           <label class="label label-info" >Software Name :</label><span class="event-title">{{ content.name }}</span>
     <label class="label label-info">Price: </label>      <span class="event-title">{{ content.price }}</span>
-        <span class="event-buy"><a href="/homepage/categories/products/{{ content.id }}" class="button blue right">View Details</a>
-    </span>
+        <span class="event-buy"><a href="/homepage/categories/products/{{ content.id }}/downloadjar" class="button blue right">Download JAR</a>
+   </span>
       </div>
 </div>
         </div>
