--- a/tests/templates/mysoftwares.html
+++ b/tests/templates/mysoftwares.html
@@ -1,32 +1,37 @@
 {% extends 'base.html' %}
 {% block content %}
-{% load mathfilters %}
  {% if data %}
 {% for content in data %}
-  <div class="animated rollIn delay-20s">
+    <div class="animated rollIn delay-20s">
     <div class="content">
     <div class="feed-item card">
       <div class="feed-header clearfix">
         <span class="user-image left">
           <img src={{ content.companylogo.url }} width="50px" />
         </span>
-        <span class="user-name"><a href="" data-entity="person">{{content.softwareinfo.seller}} <strong>(SELLER'S NAME)</strong></a>
+        <span class="user-name"><a href="" data-entity="person">{{content.softwareinfo.seller}}</a>
         </span>
       </div>
       <div class="feed-image">
-          <label class="label label-info" >Product Image:</label>
+          <label class="label label-info" >Product Image:</label> <br/>
         <img src={{ content.softwareinfo.productimage.url }}/>
       </div>
+
       <div class="feed-content">
           <label class="label label-info" >Software Name:</label><span class="event-title">{{ content.softwareinfo.name }}</span>
           <label class="label label-info" >Category: </label><span class="event-title">{{ content.softwareinfo.list.cname }}</span>
           <label class="label label-info">Desciption: </label>      <span class="event-title">{{ content.softwareinfo.description }}</span>
           <label class="label label-info" >Price: </label><span class="event-title">{{ content.softwareinfo.price }}</span>
-          <label class="label label-info" >Uses Left: </label><span class="event-title">{{ 3|sub:content.maccount }}</span>
+          <hr style="border: none;height: 1px;background-color: #333;">
+          <span class="event-buy">
+              <form action="/homepage/categories/products/productpurchased/{{ content.id }}">
+             <button class="btn btn-primary" type="submit" onclick="isDownloading();" id = "downloading">PAY</button>
+                  </form>
+          </span>
     </div>
         </div>
     </div>
-      </div>
+    </div>
     {% endfor %}
 {% else %}
     <div class="jumbotron">
@@ -37,5 +42,14 @@
       </div>
     </div>
 {% endif %}
+
+<script>
+    function isDownloading(){
+        var spinner = document.getElementById("downloading");
+        spinner.innerHTML = "Downloading...";
+    }
+</script>
+
+
 
 {% endblock %}
