Pure Final Changes

--- a/tests/templates/allsoftwares.html
+++ b/tests/templates/allsoftwares.html
@@ -18,7 +18,7 @@
       <div class="feed-content">
           <label class="label label-info" >Software Name :</label><span class="event-title">{{ content.name }}</span>
     <label class="label label-info">Price: </label>      <span class="event-title">{{ content.price }}</span>
-        <span class="event-buy"><a href="/homepage/categories/products/{{ content.id }}/downloadjar" class="button blue right">Download JAR</a>
+        <span class="event-buy"><a href="/homepage/categories/products/{{ content.id }}/downloadjar" target ="_blank" class="button blue right">Download JAR</a>
     </span>
       </div>
 </div>
