--- a/tests/templates/mysoftwares.html
+++ b/tests/templates/mysoftwares.html
@@ -25,7 +25,7 @@
           <hr style="border: none;height: 1px;background-color: #333;">
           <span class="event-buy">
               <form action="/homepage/categories/products/productpurchased/{{ content.id }}">
-             <button class="btn btn-primary" type="submit" onclick="isDownloading();" id = "downloading">PAY</button>
+             <button class="btn btn-primary" type="submit" onclick="isDownloading();" target="_blank" id = "downloading">PAY</button>
                   </form>
           </span>
     </div>
