Ultimate Final Changes

--- a/tests/templates/mysoftwares.html
+++ b/tests/templates/mysoftwares.html
@@ -7,7 +7,7 @@
     <div class="feed-item card">
       <div class="feed-header clearfix">
         <span class="user-image left">
-          <img src={{ content.companylogo.url }} width="50px" />
+          <img src={{ content.softwareinfo.companylogo.url }} width="50px" />
         </span>
         <span class="user-name"><a href="" data-entity="person">{{content.softwareinfo.seller}}</a>
         </span>
